--- a/done/P18161_179_S75_L004.ini
+++ b/done/P18161_179_S75_L004.ini
@@ -1,5 +1,5 @@
 [Pipeline]
-sample=P18161_179/02-FASTQ/201104_A00187_0373_BHGM2CDSXY/P18161_179_S75_L004
+sample="P18161_179/02-FASTQ/201104_A00187_0373_BHGM2CDSXY/P18161_179_S75_L004"
 forward_identifier="_R1_001.fastq.gz"
 reverse_identifier="_R2_001.fastq.gz"
 seq_data_dir="/proj/snic2020-6-153/delivery04021/P18161"
@@ -12,7 +12,7 @@ meteor="/proj/uppstore2019028/projects/metagenome/software/meteor_linux_2019.11.
 Rdir="/proj/uppstore2019028/projects/metagenome/meteor_downstream_rscripts"
 reference_dir="/proj/uppstore2019028/projects/metagenome/meteor_ref"
 [worksession]
-meteor.reference.dir=/scratch/20273032/reference
+meteor.reference.dir=/scratch/20383268/reference
 meteor.db.type=binary
 meteor.nb.attempts=3
 meteor.read.cleaning.program=none
