--- a/uppnextfl.config
+++ b/uppnextfl.config
@@ -1,8 +1,8 @@
 process.module = ['bioinfo-tools', 'ruby/2.6.2', 'bowtie2/2.3.4.1', 'java/OpenJDK_11.0.2']
 
 params {
-	input="/users/k1809704/FMT153_{1,2}.fastq.gz"
-	outdir = "
+	input="/proj/snic2021-6-89/COVID/fastq/gs/HFFWNDSXY_103667-005-290_AGGATGGT-CGGAATAC_L004_R{1,3}.fastq.gz"
+	outdir = '/proj/uppstore2019028/projects/metagenome/theo/metnfout'
 	tracedir = "${params.outdir}/pipeline_info"
 	catalog_type = 'gut_catalog'
 	seq_platform = 'illumina'
