Edits to rosalind config

--- a/configs/rosalind.config
+++ b/configs/rosalind.config
@@ -5,24 +5,26 @@ params {
   config_profile_description = 'Kings College London Rosalind HPC'
   config_profile_contact = 'Theo Portlock'
   config_profile_url = 'https://www.rosalind.kcl.ac.uk/'
-  project = null
+  partition = null
   clusterOptions = null
-  schema_ignore_params = "genomes,input_paths,cluster-options,clusterOptions,project"
   save_reference = true
-  max_memory = 100.GB
-  max_cpus = 15
-  max_time = 168.h
+  //max_memory = 64.GB
+  //max_cpus = 16
+  //max_time = 24.h
   partition = 'shared'
 }
 
 singularity {
   enabled = true
+  autoMounts = true
+  docker.enabled = false
 }
 
 process {
   executor = 'slurm'
   maxRetries = 2
-  clusterOptions = { "-A $params.project ${params.clusterOptions ?: ''}" }
+  clusterOptions = { "--partition=$params.partition ${params.clusterOptions ?: ''}" }
+  //queue = 'brc'
 }
 
 executor {
