--- a/configs/conf/rosrun.config
+++ b/configs/conf/rosrun.config
@@ -1,11 +1,12 @@
 params {
 	input = "/mnt/lustre/users/k1809704/FMT185_{1,2}.fastq.gz"
 	outdir = "/mnt/lustre/users/k1809704/nftest"
-	catalog_type = 'gut_catalog'
-	seq_platform = 'illumina'
 	trimFasta = "/mnt/lustre/groups/chmi/METEOR/alienTrimmerPF8contaminants.fasta"
 	reference = "/mnt/lustre/groups/chmi/METEOR/meteor_ref"
+	catalog_type = 'gut_catalog'
+	seq_platform = 'illumina'
 	mainref = 'hs_10_4_igc2'
+	msp_dir = "/proj/uppstore2019028/projects/metagenome/dataverse_files"
 	inifile = """
 	[worksession]
 	meteor.reference.dir=/proj/uppstore2019028/projects/metagenome/meteor_ref
@@ -50,12 +51,4 @@ params {
 	meteor.bestalignment=1
 	meteor.mapping.prefix.name=mapping_vs_Bos_taurus_UMD3
 	"""
-}
-manifest {
-	name = 'meteor-nf'
-	author = 'Theo Portlock'
-	homePage = 'https://github.com/theoportlock/meteor_pipeline'
-	description = 'A metagenomics pipeline for the binning into MSPs'
-	mainScript = 'main.nf'
-	version = '1.0.0'
 }
