minor config changes

--- a/configs/conf/rosrun.config
+++ b/configs/conf/rosrun.config
@@ -6,7 +6,7 @@ reference = "/mnt/lustre/groups/chmi/METEOR/meteor_ref"
 catalog_type = 'gut_catalog'
 seq_platform = 'illumina'
 mainref = 'hs_10_4_igc2'
-msp_dir = "/proj/uppstore2019028/projects/metagenome/dataverse_files"
+msp_dir = "/mnt/lustre/groups/chmi/METEOR/igc2_MSP/IGC2.1990MSPs.tsv"
 inifile = """[worksession]
 meteor.reference.dir=/mnt/lustre/groups/chmi/METEOR/meteor_ref
 meteor.db.type=binary
@@ -16,7 +16,7 @@ meteor.read.cleaning.cmd=
 meteor.mapping.program=bowtie2
 meteor.mapping.file.format=sam
 meteor.is.cpu.percentage=0
-meteor.cpu.count=1
+meteor.cpu.count=10
 meteor.checksum=md5
 meteor.excluded.reference.count=3
 [main_reference]
