--- a/configs/institutional/rosalind.config
+++ b/configs/institutional/rosalind.config
@@ -2,17 +2,19 @@ params {
 	config_profile_description = 'Kings College London Rosalind HPC'
 	config_profile_contact = 'Theo Portlock'
 	config_profile_url = 'https://www.rosalind.kcl.ac.uk/'
-	max_memory = 64.GB
-	max_cpus = 16
-	max_time = 24.h
-	partition = 'shared'
-	clusterOptions = null
 }
 
 singularity {
 	enabled = true
 	autoMounts = true
 	docker.enabled = false
+}
+
+params {
+	max_memory = 64.GB
+	max_cpus = 16
+	max_time = 24.h
+	partition = 'shared'
 }
 
 process {
