Add laptop compatibility

--- a/configs/institutional/local.config
+++ b/configs/institutional/local.config
@@ -1,17 +1,13 @@
 // Profile config names for nf-core/configs
 params {
-  config_profile_description = 'Laptop configuration'
+  config_profile_description = 'Local configuration'
   config_profile_contact = 'Theo Portlock'
   config_profile_url = 'https://www.githubio.theoportock.com/'
   project = null
 }
 
 docker {
-  enabled = false
-}
-
-process {
-  executor = 'slurm'
+  enabled = true
 }
 
 params {
